--- a/02 - Básico do desenvolvimento web/01/01.html
+++ b/02 - Básico do desenvolvimento web/01/01.html
@@ -1,18 +1,58 @@
-<!-- html -> Hyper Text Markup Language
-html != Programação
-html = Marcação -->
-
-
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Nossa Página</title>
-    </head>
-    <body>
-        <h1>Essa é a nossa primeira página</h1>
-        <p>Esse é o nosso primeiro paragrafo</p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>2.1.1. O que é HTML?</title>
+
+  <style>
+    body {
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      margin: 20px;
+      background-color: #F4F4F4;
+    }
+
+    h1, h2 {
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      color: green;
+      text-transform: uppercase;
+    }
+
+    p {
+      line-height: 1.8rem;
+      text-align: justify;
+    }
+  </style>
+</head>
+<body>
+  <h1>2.1.1 - O que é HTML?</h1>
+
+  <h2>Definição</h2>
+
+  <p>
+    O HTML é a camada de dados de uma página responsável por exibir o conteúdo e lhe dar significado. <br>
+    É como o conteúdo chega até o navegador e é apresentado ao usuário.
+  </p>
+
+  <p><strong>HTML</strong> (<em>Linguagem de Marcação de HiperTexto</em>) é o bloco de construção mais básico da web. Define o significado e a estrutura do conteúdo da web. Outras tecnologias além do HTML geralmente são usadas para descrever a aparência/apresentação (CSS) ou a funcionalidade/comportamento (JavaScript) de uma página da web.</p>
+
+  <p>"Hipertexto" refere-se aos links que conectam páginas da Web entre si, seja dentro de um único site ou entre sites. Links são um aspecto fundamental da web. Ao carregar conteúdo na Internet e vinculá-lo a páginas criadas por outras pessoas, você se torna um participante ativo na world wide web.</p>
+
+  <p>O <abbr title="Hyper-Text Markup Language">HTML</abbr> usa "Marcação" para anotar texto, imagem e outros conteúdos para exibição em um navegador da Web. A marcação HTML inclui "elementos" especiais, como &lt;head>, &lt;title>, &lt;body>, &lt;header>, &lt;footer>, &lt;article>, &lt;section>, &lt;p>, &lt;div>, &lt;span>, &lt;img>, &lt;aside>, &lt;audio>, &lt;canvas>, &lt;datalist>, &lt;details>, &lt;embed>, &lt;nav>, &lt;output>, &lt;progress>, &lt;video>, &lt;ul>, &lt;ol>, &lt;li> e muitos outros.</p>
+
+  <p>Um elemento HTML é separado de outro texto em um documento por "tags", que consistem no nome do elemento entre "<" e ">". O nome de um elemento dentro de uma tag é insensível a maiúsculas e minúsculas. Isto é, pode ser escrito em maiúsculas, minúsculas ou um mistura. Por exemplo, a tag &lt;title> pode ser escrita como &lt;Title>, &lt;TITLE> ou de qualquer outra forma.</p>
+
+
+  <h2>Como funciona</h2>
+
+  <p>A forma que o HTML trabalha é através de tags. Uma tag é usada para delimitar o início e o fim de um elemento, que é um bloco de conteúdo que recebe um tipo de formatação e comportamento de acordo com a tag utilizada.</p>
+
+  <p>Se uma tag &lt;IMG> é usada, ela vai renderizar uma imagem, da mesma forma uma tag &lt;P> irá renderizar um conteúdo dentro de um parágrafo - são comportamentos distintos, mas que ilustram a importância do entendimento das tags.</p>
+
+
+  <h2>Exercícios</h2>
+
+  <p>Navegue por páginas de sites que você sempre costuma visitar e verifique seu código fonte. Analise os elementos que constituem esse website, tente se familiarizar com o conceito de tags, e identifique os pequenos padrões entre esses websites.</p>
+</body>
 </html>
-
-
-
